[gd_scene load_steps=7 format=3 uid="uid://cg55uk4s6qv0g"]

[ext_resource type="Script" uid="uid://sy1qjygxknt0" path="res://gameplay/player.gd" id="1_4flbx"]
[ext_resource type="Shader" uid="uid://bgbqefwcusl52" path="res://gameplay/player.gdshader" id="2_hqtel"]
[ext_resource type="Texture2D" uid="uid://chi3vm53wpukh" path="res://player.png" id="2_onrkg"]
[ext_resource type="Script" uid="uid://udgl2ehv0tdf" path="res://sprite_bouncer_2D.gd" id="3_i3pqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sweqy"]
shader = ExtResource("2_hqtel")

[sub_resource type="CircleShape2D" id="CircleShape2D_hqtel"]
radius = 12.337838

[node name="Player" type="Area2D"]
script = ExtResource("1_4flbx")

[node name="SpriteBouncer2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_sweqy")
position = Vector2(0.375, 0.12499976)
scale = Vector2(9.1640625, 9.0703125)
texture = ExtResource("2_onrkg")
script = ExtResource("3_i3pqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.7683716e-07)
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_hqtel")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
